# AI_neuroral_network

./: .gitignore  CMakeLists.txt  README.md
datasets/kaggle/: features.csv
python/: train_NN.py
vitis_hls/: NN.c  NN.h  common.c  common.h  main.c  train_NN.c  train_NN.h
